2004-07-21  Christian Bayle <bayle@aist.enst.fr>
	
	* Some renaming cvs -> scm
	* Rebuild etc/*.example without cvs stuffs at the moment
	more work needed on setup
	* Added co work from Kikov and GSmet to enable i18n in plugins

2004-07-21  Tom Copeland <tom@infoether.com>
	
	* common/pm/ProjectTask.class: Applied patch # 
	803: Assigned-to not updated when sending mail
	
2004-07-20  Tom Copeland <tom@infoether.com>

	* www/include/languages/Basque.tab: Applied patch # 
	841 - Basque language file.
	* www/snippet/package.php: Fixed bug #750: Dead links 
	on the snippet package page
	* cronjobs/massmail.php: Fixed bug #837: Mass mailing 
	sends duplicate emails.
	* www/include/languages/Spanish.tab: Applied patch #
	843 Spanish.tab patch updated to 2004-07.

2004-07-20  Christian Bayle <bayle@aist.enst.fr>

	* reorganisation of submenu with intensive use of $HTML->subMenu()
	* change way of dealing with login error, not using a string
	comparison in $feedback, but a proper userstatus global
	* Applied kikov patch to add 3 hooks in
	www/tracker/[detail.php mod-limited.php mod.php] (closes patch#842)

2004-07-07  Tom Copeland <tom@infoether.com>

	* common/include/constants.php: Removed duplicate declaration.

2004-06-30  Tom Copeland <tom@infoether.com>

	* www/exports/rss_sfnews.php, index.html: Applied patch #831:
	More detailed RSS feed
	* common/include/utils.php, www/frs/index.html: Applied patch
	#808: Human-Readable Filesizes
	* common/docman/Document.class: Applied patch #786:
	Allow DocMgr editors to upload documents directly in ACTIVE state

2004-06-29  Tom Copeland <tom@infoether.com>

	* common/pm/ProjectTask.class: Applied patch #825:
	pg_atoi error in Tasks
	* www/tracker/mod-limited.php: Applied patch #802:
	invalid download link for attached files in a tracker item

2004-06-09  Tom Copeland <tom@infoether.com>

	* www/include/languages/PortugueseBrazilian.tab: Applied patch #811:
	Small (but relevant) fix for Brazilian Portuguese translation
